force-app/main/default/objects/CartLineItem__c/CartLineItem__c.object-meta.xml
<CustomObject>
    <description>Junction object between the Cart and the Product</description>
    <label>Cart Line Item</label>
    <nameField>
        <displayFormat>CLI-{00000}</displayFormat>
        <label>Cart Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cart Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>