force-app/main/default/objects/CartLineItem__c/fields/Customer_Cart__c.field-meta.xml
<CustomField>
    <fullName>Customer_Cart__c</fullName>
    <description>What is the Customer cart in this junction object?</description>
    <inlineHelpText>What is the Customer cart in this junction object?</inlineHelpText>
    <label>Customer Cart</label>
    <referenceTo>Cart__c</referenceTo>
    <relationshipLabel>Cart Line Items</relationshipLabel>
    <relationshipName>Cart_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>