force-app/main/default/objects/CartLineItem__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>What is a discount related to the product?</description>
    <inlineHelpText>What is a discount related to the product?</inlineHelpText>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>