force-app/main/default/objects/CartLineItem__c/fields/EffectiveUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>EffectiveUnitPrice__c</fullName>
    <description>What is a Unit Price after the Discount is applied?</description>
    <formula>(1- Discount__c)* UnitListPrice__c</formula>
    <inlineHelpText>What is a Unit Price after the Discount is applied?</inlineHelpText>
    <label>Effective Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>