force-app/main/default/objects/CartLineItem__c/fields/Online_Product__c.field-meta.xml
<CustomField>
    <fullName>Online_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What is Online Product in this junction object?</description>
    <inlineHelpText>What is Online Product in this junction object?</inlineHelpText>
    <label>Online Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Cart Line Items</relationshipLabel>
    <relationshipName>Cart_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>