force-app/main/default/objects/CartLineItem__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>How many Product are in a Cart?</description>
    <inlineHelpText>How many Product are in a Cart?</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>