force-app/main/default/objects/CartLineItem__c/fields/TotalNetPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalNetPrice__c</fullName>
    <description>How much does this Quantity of the Product cost after the Discount is applied?</description>
    <formula>EffectiveUnitPrice__c * Quantity__c</formula>
    <inlineHelpText>How much does this Quantity of the Product cost after the Discount is applied?</inlineHelpText>
    <label>Total Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>