force-app/main/default/objects/CartLineItem__c/fields/UnitListPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitListPrice__c</fullName>
    <description>What is a Unit List Price of the product?</description>
    <formula>Online_Product__r.Price__c</formula>
    <inlineHelpText>What is a Unit List Price of the product?</inlineHelpText>
    <label>Unit List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>